# timeboxd

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  bacon.toml  devenv.nix  devenv.yaml  flake.nix  secretspec.toml
.github/workflows/: deploy.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250107_000001_create_provider_cache.rs  m20250109_000001_add_provider_cache_unique.rs
migrations/: 001_initial.sql  002_add_poster_path.sql
src/: cache.rs  config.rs  countries.rs  db.rs  error.rs  main.rs  models.rs  processor.rs  routes.rs  scraper.rs  templates.rs  tmdb.rs
src/entities/: film_cache.rs  mod.rs  provider_cache.rs  provider_cache_meta.rs  release_cache.rs  release_cache_meta.rs
